<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="show_name_btn_text">Show name</string>
    <string name="name_input_placeholder">Whats your name?</string>
    <string name="empty_name_msg">No name is input</string>
    <string name="show_info_btn_text">Show info</string>
    <string name="app_info_msg">App info here</string>
    <string name="change_color_btn_text">Color</string>
    <string name="go_detail_screen_btn_text">Go details</string>
    <string name="bio_text">Family confirms identity of third American volunteer fighter missing in action in Ukraine
From CNN\'s Ellie Kaufman

The third American who the US State Department identified as missing in action in Ukraine is a US Marine veteran, Grady Kurpasi, his wife, Heeson Kim, confirmed to CNN.

The last time Kim and other close friends heard from Kurpasi was between April 23 and 24, George Heath, a family friend of Kurpasi’s told CNN.

Kurpasi served in the US Marine Corps for 20 years, retiring in November 2021. He chose to volunteer alongside Ukrainians in Ukraine but initially did not envision himself fighting on the frontlines of the war, Heath said.

“For him personally, he has a skillset that he feels he can give back,” Heath said. “He wanted to go and help the Ukrainian people. He wasn’t really planning on fighting.”
The State Department said they were aware of reports of a third American who traveled to Ukraine to fight against Russia who has been identified “in recent weeks” as missing, State Department spokesperson Ned Price said during a press briefing on Thursday.

Price did not give the name of the third reportedly missing American, but said the State Department was in touch with the family.

Kurpasi arrived in Ukraine on March 7 and made it to Ukraine’s capital of Kyiv on March 21, Heath said. Kurpasi and other members of the foreign legion were tasked to man an observation post at the end of April near Kherson, around the time Kurpasi stopped communicating with his wife and friends back in the US, Heath said.

The foreign legion is a group of foreign fighters who have volunteered to fight alongside Ukrainians against Russia’s invasion of the country. It is not clear if Kurpasi was a member of the foreign legion, but he was a volunteer fighting alongside Ukrainians, Heath said.

Kurpasi and foreign legion troops manning the post at the time started “receiving small arms fire” on April 26, Heath said, meaning they were getting shot at. Kurpasi and the other soldier “went to go investigate what was happening,” so they left the observation post, Heath said. Grady then radioed to Ukrainian military to start firing back and “that was the last time anyone heard from him,” Heath said.

Heath has reconstructed this account from other foreign legion members he’s spoken with in the weeks since Kurpasi has gone missing, he said.

The State Department told Kim that Kurpasi was missing in action on April 28, Heath said. The reason he has been identified as missing in action is because his body has not been found or identified, he added.

Kurpasi’s “goal was not to be in firefights doing stuff like that,” when he went to Ukraine, Heath said. “It just ended up being that way in the end,” he added.

Kurpasi joined the US Marines after September 11 and had four deployments in total during his service, including three to Iraq. He was a decorated service member who won the Good Conduct Medal three times, the Navy and Marine Corps Achievement Medal three times, the Purple Heart medal, the National Defense Service Medal, and the Global War on Terrorism Expeditionary Medal, among other awards, according to his military service record.

Heath described Kurpasi as a “great leader.” Kurpasi was Heath’s platoon commander in the US Marines from 2012 to 2014, Heath said.

“He always led from the front. He always took care of his Marines,” Heath said.

After retiring from the Marines last fall, Kurpasi applied to a PhD program at Stanford University. He did not get into the program but was applying to other doctorate programs while he was in Ukraine, Heath said.

Kurpasi’s last post in the military was at Camp Lejeune in North Carolina. He was living in Wilmington, North Carolina before he left for Ukraine, another family friend, Jason Tokushige told CNN.</string>
</resources>